# mdx-rs

./: .gitignore  .taplo.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.d.ts  index.js  justfile  package.json  pnpm-lock.yaml  rust-toolchain  rust-toolchain.toml
.cargo/: config.toml
.github/actions/rustup/: action.yml
.github/workflows/: CI.yml  benchmark.yml  release.yml  reusable_benchmark.yml
__test__/: compile-jsx.mdx  container-content.md  container-content.mdx  container-title.md  container-title.mdx  container-type-with-space.md  container-type.md  container.md  github-alert-syntax.md  index.spec.ts  tsconfig.json
__test__/__snapshots__/: index.spec.ts.snap
benches/: index.js  index.mjs
benches/fixtures/: example.md
crates/binding/: Cargo.toml
crates/binding/src/: lib.rs
crates/hast/: Cargo.toml
crates/hast/src/: lib.rs
crates/mdx_rs/: Cargo.toml
crates/mdx_rs/src/: configuration.rs  hast_util_to_swc.rs  lib.rs  mdast_util_to_hast.rs  mdx_plugin_recma_document.rs  mdx_plugin_recma_jsx_rewrite.rs  swc.rs  swc_util_build_jsx.rs  swc_utils.rs
crates/plugin_code_block/: Cargo.toml
crates/plugin_code_block/src/: lib.rs
crates/plugin_container/: Cargo.toml
crates/plugin_container/src/: lib.rs
crates/plugin_external_link/: Cargo.toml
crates/plugin_external_link/src/: lib.rs
crates/plugin_frontmatter/: Cargo.toml
crates/plugin_frontmatter/src/: lib.rs
crates/plugin_header_anchor/: Cargo.toml
crates/plugin_header_anchor/src/: lib.rs
crates/plugin_highlighter/: Cargo.toml
crates/plugin_highlighter/src/: lib.rs
crates/plugin_html/: Cargo.toml
crates/plugin_html/src/: lib.rs
crates/plugin_normalize_link/: Cargo.toml
crates/plugin_normalize_link/src/: lib.rs
crates/plugin_toc/: Cargo.toml
crates/plugin_toc/src/: lib.rs
crates/slugger/: Cargo.toml
crates/slugger/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
tasks/benchmark/: Cargo.toml
tasks/benchmark/src/: main.rs
