cargo-features = ["strip"]

[workspace]
members = ["crates/*", "tasks/*"]

[workspace.features]
serializable = ["serde"]

[workspace.dependencies]
markdown = "1.0.0-alpha.10"
serde = { version = "1.0.130" }
swc_core = { version = "0.79.0", features = [
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "ecma_parser",
  "common",
] }
pretty_assertions="1.3.0"
serde_yaml = "0.9.19"
serde_json = "1.0.70"