cargo-features = ["strip"]

[workspace]
members  = ["crates/*", "tasks/*"]
resolver = "2"

[workspace.dependencies]
markdown          = "=1.0.0-alpha.16"
serde             = { version = "1.0.130" }
swc_core          = { version = "0.79.0", features = ["ecma_ast", "ecma_visit", "ecma_codegen", "ecma_parser", "common"] }
pretty_assertions = "1.3.0"
serde_yaml        = "0.9.19"
serde_json        = "1.0.70"


[profile.release]
lto           = true
codegen-units = 1
