[package]
name = "mdx_rs_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mdx_rs = { path = "../mdx_rs" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.9.1", default-features = false, features = ["napi7"] }
napi-derive = "2.9.1"
crossbeam-channel = "0.5.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
