[package]
name    = "mdx_rs_binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[dependencies]
mdx_rs = { path = "../mdx_rs" }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi              = { version = "2.9.1", default-features = false, features = ["napi7"] }
napi-derive       = "2.9.1"
crossbeam-channel = "0.5.6"
mdx_plugin_toc    = { path = "../plugin_toc" }

[build-dependencies]
napi-build = "2.0.1"
