[package]
name    = "mdx_rs_benchmark"
version = "0.0.0"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdx_rs    = { path = "../../crates/mdx_rs" }
criterion = { version = "0.5.1", default-features = false }
pico-args = { version = "0.5.0" }
